[2.3.x] +fix findbugs issues