@@ -59,7 +59,7 @@ public class PingFrame extends Http2Frame {
             new HashMap<Integer, String>(2);
     
     static {
-        FLAG_NAMES_MAP.put(new Integer(ACK_FLAG), "ACK");
+        FLAG_NAMES_MAP.put(Integer.valueOf(ACK_FLAG), "ACK");
     }
     
     private long opaqueData;
